Little refactoring on simultaneous effects choice classes